cabal-version: >=1.10
name:          ouroboros-consensus-byron-test
version:       0.1.0.0.0.0.0.0.1
license:       Apache-2.0
license-file:  LICENSE NOTICE
copyright:     2020 Input Output (Hong Kong) Ltd.
maintainer:    operations@iohk.io
author:        IOHK Engineering Team
synopsis:      Test infrastructure for Byron
category:      Network
build-type:    Simple

source-repository head
    type:     git
    location: https://github.com/input-output-hk/ouroboros-network

library
    exposed-modules:
        Ouroboros.Consensus.ByronDual.Ledger
        Ouroboros.Consensus.ByronDual.Node
        Ouroboros.Consensus.ByronDual.Node.Serialisation
        Test.Consensus.Byron.Examples
        Test.Consensus.Byron.Generators
        Test.ThreadNet.Infra.Byron
        Test.ThreadNet.Infra.Byron.Genesis
        Test.ThreadNet.Infra.Byron.ProtocolInfo
        Test.ThreadNet.Infra.Byron.TrackUpdates
        Test.ThreadNet.TxGen.Byron

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wpartial-fields -Widentities
        -Wredundant-constraints -Wmissing-export-lists -fno-ignore-asserts

    build-depends:
        base >=4.9 && <4.15,
        bytestring >=0.10 && <0.11,
        cardano-binary,
        cardano-crypto-class,
        cardano-crypto-test,
        cardano-crypto-wrapper,
        cardano-ledger-byron,
        cardano-ledger-byron-test,
        containers >=0.5 && <0.7,
        hedgehog-quickcheck,
        mtl >=2.2 && <2.3,
        QuickCheck,
        serialise >=0.2 && <0.3,
        byron-spec-ledger,
        ouroboros-network,
        ouroboros-consensus,
        ouroboros-consensus-test,
        ouroboros-consensus-byron,
        ouroboros-consensus-byronspec

test-suite test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    other-modules:
        Test.Consensus.Byron.Golden
        Test.Consensus.Byron.Serialisation
        Test.ThreadNet.Byron
        Test.ThreadNet.DualByron

    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wpartial-fields -Widentities
        -Wredundant-constraints -Wmissing-export-lists -fno-ignore-asserts
        -threaded -rtsopts

    build-depends:
        base,
        binary-search,
        bytestring,
        cardano-binary,
        cardano-crypto-class,
        cardano-crypto-wrapper,
        cardano-ledger-byron,
        cardano-ledger-byron-test,
        cardano-slotting,
        cborg,
        containers,
        filepath,
        hedgehog-quickcheck,
        mtl,
        QuickCheck,
        tasty,
        tasty-quickcheck,
        byron-spec-chain,
        byron-spec-ledger,
        small-steps,
        small-steps-test,
        ouroboros-network,
        ouroboros-consensus,
        ouroboros-consensus-test,
        ouroboros-consensus-byron,
        ouroboros-consensus-byron-test,
        ouroboros-consensus-byronspec
