cabal-version: >=1.10
name:          ouroboros-consensus-byron
version:       0.1.0.0.0.0.0.0.1
license:       Apache-2.0
license-file:  LICENSE NOTICE
copyright:     2019 Input Output (Hong Kong) Ltd.
maintainer:    operations@iohk.io
author:        IOHK Engineering Team
synopsis:      Byron ledger integration in the Ouroboros consensus layer
category:      Network
build-type:    Simple

source-repository head
    type:     git
    location: https://github.com/input-output-hk/ouroboros-network

flag asserts
    description: Enable assertions
    default:     False

library
    exposed-modules:
        Ouroboros.Consensus.Byron.Crypto.DSIGN
        Ouroboros.Consensus.Byron.EBBs
        Ouroboros.Consensus.Byron.Ledger
        Ouroboros.Consensus.Byron.Ledger.Block
        Ouroboros.Consensus.Byron.Ledger.Config
        Ouroboros.Consensus.Byron.Ledger.Conversions
        Ouroboros.Consensus.Byron.Ledger.Forge
        Ouroboros.Consensus.Byron.Ledger.HeaderValidation
        Ouroboros.Consensus.Byron.Ledger.Inspect
        Ouroboros.Consensus.Byron.Ledger.Integrity
        Ouroboros.Consensus.Byron.Ledger.Ledger
        Ouroboros.Consensus.Byron.Ledger.Mempool
        Ouroboros.Consensus.Byron.Ledger.NetworkProtocolVersion
        Ouroboros.Consensus.Byron.Ledger.Orphans
        Ouroboros.Consensus.Byron.Ledger.PBFT
        Ouroboros.Consensus.Byron.Ledger.Serialisation
        Ouroboros.Consensus.Byron.Node
        Ouroboros.Consensus.Byron.Node.Serialisation
        Ouroboros.Consensus.Byron.Protocol

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wpartial-fields -Widentities
        -Wredundant-constraints -Wmissing-export-lists

    build-depends:
        base >=4.9 && <4.15,
        bytestring >=0.10 && <0.11,
        cardano-binary,
        cardano-crypto,
        cardano-crypto-class,
        cardano-crypto-wrapper,
        cardano-ledger-byron,
        cardano-prelude,
        cardano-slotting,
        cborg >=0.2.2 && <0.3,
        containers >=0.5 && <0.7,
        cryptonite >=0.25 && <0.28,
        formatting >=6.3 && <6.4,
        mtl >=2.2 && <2.3,
        serialise >=0.2 && <0.3,
        nothunks,
        text >=1.2 && <1.3,
        ouroboros-network,
        ouroboros-consensus

    if flag(asserts)
        ghc-options: -fno-ignore-asserts

executable db-converter
    main-is:          Main.hs
    hs-source-dirs:   tools/db-converter
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wpartial-fields -Widentities
        -Wredundant-constraints -Wmissing-export-lists

    build-depends:
        base,
        bytestring,
        cardano-binary,
        cardano-ledger-byron,
        directory,
        filepath,
        mtl,
        optparse-generic,
        resourcet,
        streaming,
        text,
        ouroboros-network,
        ouroboros-consensus,
        ouroboros-consensus-byron
