cabal-version: >=1.10
name:          ouroboros-consensus-byronspec
version:       0.1.0.0.0.0.0.0.1
license:       Apache-2.0
license-file:  LICENSE NOTICE
copyright:     2019 Input Output (Hong Kong) Ltd.
maintainer:    operations@iohk.io
author:        IOHK Engineering Team
synopsis:
    ByronSpec ledger integration in the Ouroboros consensus layer

category:      Network
build-type:    Simple

source-repository head
    type:     git
    location: https://github.com/input-output-hk/ouroboros-network

library
    exposed-modules:
        Ouroboros.Consensus.ByronSpec.Ledger
        Ouroboros.Consensus.ByronSpec.Ledger.Accessors
        Ouroboros.Consensus.ByronSpec.Ledger.Block
        Ouroboros.Consensus.ByronSpec.Ledger.Conversions
        Ouroboros.Consensus.ByronSpec.Ledger.Forge
        Ouroboros.Consensus.ByronSpec.Ledger.Genesis
        Ouroboros.Consensus.ByronSpec.Ledger.GenTx
        Ouroboros.Consensus.ByronSpec.Ledger.Ledger
        Ouroboros.Consensus.ByronSpec.Ledger.Mempool
        Ouroboros.Consensus.ByronSpec.Ledger.Orphans
        Ouroboros.Consensus.ByronSpec.Ledger.Rules

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wpartial-fields -Widentities
        -Wredundant-constraints -Wmissing-export-lists

    build-depends:
        base >=4.9 && <4.15,
        bimap >=0.3 && <0.5,
        cardano-binary,
        cardano-ledger-byron-test,
        cardano-slotting,
        cborg >=0.2.2 && <0.3,
        containers >=0.5 && <0.7,
        byron-spec-chain,
        byron-spec-ledger,
        mtl >=2.2 && <2.3,
        nothunks,
        serialise >=0.2 && <0.3,
        small-steps,
        transformers,
        ouroboros-network,
        ouroboros-consensus
