cabal-version: >=1.10
name:          ouroboros-consensus-cardano-tools
version:       0.1.0.0.0.0.0.0.4
license:       Apache-2.0
license-file:  NOTICE
copyright:     2022 Input Output (Hong Kong) Ltd.
maintainer:    operations@iohk.io
author:        IOHK 
synopsis:      Programmatically synthesize and analyse a ChainDB
category:      Network
build-type:    Simple

source-repository head
    type:     git
    location: https://github.com/input-output-hk/ouroboros-network

flag asserts
    description: Enable assertions
    default:     False

library
    exposed-modules:
        Cardano.Api.Any
        Cardano.Api.Protocol.Types
        Cardano.Node.Protocol.Types
        Cardano.Node.Types
        Cardano.Node.Protocol
        Cardano.Tools.DBAnalyser.Analysis
        Cardano.Tools.DBAnalyser.Block.Byron
        Cardano.Tools.DBAnalyser.Block.Cardano
        Cardano.Tools.DBAnalyser.Block.Shelley
        Cardano.Tools.DBAnalyser.HasAnalysis
        Cardano.Tools.DBAnalyser.Run
        Cardano.Tools.DBAnalyser.Types
        Cardano.Tools.DBSynthesizer.Forging
        Cardano.Tools.DBSynthesizer.Orphans
        Cardano.Tools.DBSynthesizer.Run
        Cardano.Tools.DBSynthesizer.Types

    hs-source-dirs:   src
    other-modules:
        Cardano.Api.Key
        Cardano.Api.KeysByron
        Cardano.Api.KeysPraos
        Cardano.Api.KeysShelley
        Cardano.Api.OperationalCertificate
        Cardano.Api.SerialiseUsing
        Cardano.Api.SerialiseTextEnvelope
        Cardano.Node.Protocol.Alonzo
        Cardano.Node.Protocol.Byron
        Cardano.Node.Protocol.Cardano
        Cardano.Node.Protocol.Shelley

    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wpartial-fields -Widentities
        -Wredundant-constraints -Wmissing-export-lists

    build-depends:
        base,
        aeson,
        base16-bytestring >=1.0,
        bytestring,
        cborg,
        containers,
        contra-tracer,
        deepseq,
        directory,
        filepath,
        microlens,
        mtl,
        nothunks,
        serialise,
        strict-containers,
        text,
        transformers,
        transformers-except,
        cardano-binary,
        cardano-crypto,
        cardano-crypto-wrapper,
        cardano-crypto-class,
        cardano-ledger-alonzo,
        cardano-ledger-babbage,
        cardano-ledger-byron,
        cardano-ledger-core,
        cardano-ledger-shelley,
        cardano-protocol-tpraos,
        cardano-prelude,
        ouroboros-consensus,
        ouroboros-consensus-byron,
        ouroboros-consensus-cardano,
        ouroboros-consensus-protocol,
        ouroboros-consensus-shelley,
        ouroboros-network

    if flag(asserts)
        ghc-options: -fno-ignore-asserts

executable db-analyser
    main-is:          db-analyser.hs
    hs-source-dirs:   app
    other-modules:    DBAnalyser.Parsers
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wpartial-fields -Widentities
        -Wredundant-constraints -Wmissing-export-lists -threaded -rtsopts
        "-with-rtsopts=-T -I0 -N2 -A16m"

    build-depends:
        base,
        cardano-crypto-wrapper,
        cardano-ledger-core,
        optparse-applicative,
        ouroboros-consensus,
        ouroboros-consensus-byron,
        ouroboros-consensus-cardano-tools,
        ouroboros-consensus-shelley

executable db-synthesizer
    main-is:          db-synthesizer.hs
    hs-source-dirs:   app
    other-modules:    DBSynthesizer.Parsers
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wpartial-fields -Widentities
        -Wredundant-constraints -Wmissing-export-lists -O2 -threaded
        -rtsopts "-with-rtsopts=-N -I0 -A16m"

    build-depends:
        base,
        aeson,
        bytestring,
        directory,
        filepath,
        optparse-applicative,
        cardano-ledger-core,
        ouroboros-consensus,
        ouroboros-consensus-cardano-tools,
        transformers,
        transformers-except

test-suite test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wpartial-fields -Widentities
        -Wredundant-constraints -Wmissing-export-lists -threaded -rtsopts
        "-with-rtsopts=-N -I0 -A16m"

    build-depends:
        base,
        ouroboros-consensus-cardano-tools,
        tasty,
        tasty-hunit
