cabal-version: >=1.10
name:          ouroboros-consensus-cardano
version:       0.1.0.0.0.0.0.0.3
license:       Apache-2.0
license-file:  LICENSE NOTICE
copyright:     2019 Input Output (Hong Kong) Ltd.
maintainer:    operations@iohk.io
author:        IOHK Engineering Team
synopsis:
    The instantation of the Ouroboros consensus layer used by Cardano

category:      Network
build-type:    Simple

source-repository head
    type:     git
    location: https://github.com/input-output-hk/ouroboros-network

flag asserts
    description: Enable assertions
    default:     False

library
    exposed-modules:
        Ouroboros.Consensus.Cardano
        Ouroboros.Consensus.Cardano.Block
        Ouroboros.Consensus.Cardano.ByronHFC
        Ouroboros.Consensus.Cardano.Condense
        Ouroboros.Consensus.Cardano.CanHardFork
        Ouroboros.Consensus.Cardano.Node
        Ouroboros.Consensus.Cardano.ShelleyBased

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wpartial-fields -Widentities
        -Wredundant-constraints -Wmissing-export-lists

    build-depends:
        base >=4.9 && <4.15,
        bytestring >=0.10 && <0.11,
        cborg >=0.2.2 && <0.3,
        containers >=0.5 && <0.7,
        mtl >=2.2 && <2.3,
        nothunks,
        these >=1.1 && <1.2,
        cardano-binary,
        cardano-crypto-class,
        cardano-data,
        cardano-ledger-alonzo,
        cardano-ledger-babbage,
        cardano-ledger-byron,
        cardano-ledger-core,
        cardano-ledger-shelley,
        cardano-ledger-shelley-ma,
        cardano-prelude,
        cardano-protocol-tpraos,
        cardano-slotting,
        ouroboros-network,
        ouroboros-consensus,
        ouroboros-consensus-byron,
        ouroboros-consensus-protocol,
        ouroboros-consensus-shelley

    if flag(asserts)
        ghc-options: -fno-ignore-asserts
