cabal-version: 3.0
name:          ouroboros-consensus-protocol
version:       0.1.0.0.0.0.0.0.3
license:       Apache-2.0
license-file:  LICENSE NOTICE
maintainer:    operations@iohk.io
author:        IOHK Formal methods team
synopsis:      Cardano consensus protocols.

flag asserts
    description: Enable assertions
    default:     False

library
    exposed-modules:
        Ouroboros.Consensus.Protocol.Ledger.HotKey
        Ouroboros.Consensus.Protocol.Ledger.Util
        Ouroboros.Consensus.Protocol.Praos
        Ouroboros.Consensus.Protocol.Praos.Common
        Ouroboros.Consensus.Protocol.Praos.Header
        Ouroboros.Consensus.Protocol.Praos.Translate
        Ouroboros.Consensus.Protocol.Praos.Views
        Ouroboros.Consensus.Protocol.Praos.VRF
        Ouroboros.Consensus.Protocol.TPraos
        Ouroboros.Consensus.Protocol.Translate

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wpartial-fields -Widentities
        -Wredundant-constraints -Wmissing-export-lists

    build-depends:
        base,
        bytestring,
        cardano-binary,
        cardano-crypto-class,
        cardano-data,
        cardano-ledger-core,
        cardano-ledger-shelley,
        cardano-protocol-tpraos,
        cardano-slotting,
        cborg,
        containers,
        mtl,
        nothunks,
        ouroboros-consensus,
        serialise,
        small-steps,
        text

    if flag(asserts)
        ghc-options: -fno-ignore-asserts

library ouroboros-consensus-protocol-test
    exposed-modules:  Test.Consensus.Protocol.Serialisation.Generators
    visibility:       public
    hs-source-dirs:   test-src
    default-language: Haskell2010
    build-depends:
        base,
        bytestring,
        cardano-crypto-class,
        cardano-crypto-tests,
        cardano-ledger-core,
        cardano-ledger-shelley-test,
        cardano-protocol-tpraos,
        cardano-slotting,
        ouroboros-consensus-protocol,
        QuickCheck
