cabal-version: 3.0
name:          ouroboros-consensus-shelley-test
version:       0.1.0.0.0.0.0.0.4
license:       Apache-2.0
license-file:  LICENSE NOTICE
copyright:     2020 Input Output (Hong Kong) Ltd.
maintainer:    operations@iohk.io
author:        IOHK Engineering Team
synopsis:      Test infrastructure for Shelley
category:      Network
build-type:    Simple

source-repository head
    type:     git
    location: https://github.com/input-output-hk/ouroboros-network

library
    exposed-modules:
        Test.Consensus.Shelley.Examples
        Test.Consensus.Shelley.Generators
        Test.Consensus.Shelley.MockCrypto
        Test.ThreadNet.Infra.Alonzo
        Test.ThreadNet.Infra.Shelley
        Test.ThreadNet.TxGen.Shelley

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wpartial-fields -Widentities
        -Wredundant-constraints -Wmissing-export-lists -fno-ignore-asserts

    build-depends:
        base >=4.9 && <4.15,
        bytestring >=0.10 && <0.11,
        cardano-crypto-class,
        cardano-data,
        cardano-ledger-core,
        cardano-protocol-tpraos,
        cardano-slotting,
        containers >=0.5 && <0.7,
        generic-random,
        quiet >=0.2 && <0.3,
        mtl >=2.2 && <2.3,
        QuickCheck,
        strict-containers,
        transformers,
        cardano-ledger-alonzo,
        cardano-ledger-alonzo-test,
        cardano-ledger-babbage,
        cardano-ledger-babbage-test,
        cardano-ledger-shelley,
        cardano-ledger-shelley-ma,
        cardano-ledger-shelley-ma-test,
        cardano-ledger-shelley-test,
        cardano-protocol-tpraos,
        small-steps,
        ouroboros-network,
        ouroboros-consensus,
        ouroboros-consensus-protocol,
        ouroboros-consensus-protocol:ouroboros-consensus-protocol-test,
        ouroboros-consensus-test,
        ouroboros-consensus-shelley

test-suite test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    other-modules:
        Test.Consensus.Shelley.Coherence
        Test.Consensus.Shelley.Golden
        Test.Consensus.Shelley.Serialisation
        Test.ThreadNet.Shelley

    default-language: Haskell2010
    ghc-options:
        -Wall -Wcompat -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wpartial-fields -Widentities
        -Wredundant-constraints -Wmissing-export-lists -fno-ignore-asserts
        -threaded -rtsopts

    build-depends:
        base,
        bytestring,
        cardano-crypto-class,
        cardano-slotting,
        cborg,
        containers,
        filepath,
        QuickCheck,
        tasty,
        tasty-quickcheck,
        cardano-ledger-alonzo,
        cardano-ledger-alonzo-test,
        cardano-ledger-core,
        cardano-ledger-shelley,
        cardano-protocol-tpraos,
        ouroboros-network,
        ouroboros-consensus,
        ouroboros-consensus-protocol,
        ouroboros-consensus-test,
        ouroboros-consensus-shelley,
        ouroboros-consensus-shelley-test
