cabal-version:      3.0
name:               ouroboros-network
version:            0.1.0.0.0.0.0.0.1
license:            Apache-2.0
license-file:       LICENSE NOTICE
copyright:          2019 Input Output (Hong Kong) Ltd.
author:             Alexander Vieth, Marcin Szamotulski, Duncan Coutts
synopsis:           A networking layer for the Ouroboros blockchain protocol
category:           Network
build-type:         Simple
data-files:
    test-cddl/specs/handshake-node-to-node.cddl
    test-cddl/specs/handshake-node-to-client.cddl
    test-cddl/specs/chain-sync.cddl
    test-cddl/specs/block-fetch.cddl
    test-cddl/specs/tx-submission2.cddl
    test-cddl/specs/keep-alive.cddl
    test-cddl/specs/local-tx-submission.cddl
    test-cddl/specs/local-state-query.cddl

extra-source-files: ChangeLog.md

source-repository head
    type:     git
    location: https://github.com/input-output-hk/ouroboros-network

flag asserts
    description: Enable assertions
    default:     False

flag ipv6
    description: Enable IPv6 test cases
    default:     False
    manual:      True

flag cddl
    description: Enable CDDL based tests of the CBOR encoding
    manual:      True

library
    exposed-modules:
        Ouroboros.Network.AnchoredFragment
        Ouroboros.Network.AnchoredSeq
        Ouroboros.Network.Block
        Ouroboros.Network.BlockFetch
        Ouroboros.Network.BlockFetch.Client
        Ouroboros.Network.BlockFetch.ClientRegistry
        Ouroboros.Network.BlockFetch.ClientState
        Ouroboros.Network.BlockFetch.Decision
        Ouroboros.Network.BlockFetch.DeltaQ
        Ouroboros.Network.BlockFetch.State
        Ouroboros.Network.DeltaQ
        Ouroboros.Network.Diffusion
        Ouroboros.Network.Diffusion.P2P
        Ouroboros.Network.Diffusion.NonP2P
        Ouroboros.Network.Diffusion.Policies
        Ouroboros.Network.ExitPolicy
        Ouroboros.Network.KeepAlive
        Ouroboros.Network.Magic
        Ouroboros.Network.NodeToNode
        Ouroboros.Network.NodeToNode.Version
        Ouroboros.Network.NodeToClient
        Ouroboros.Network.NodeToClient.Version
        Ouroboros.Network.Tracers
        Ouroboros.Network.Point
        Ouroboros.Network.PeerSelection.Types
        Ouroboros.Network.PeerSelection.EstablishedPeers
        Ouroboros.Network.PeerSelection.KnownPeers
        Ouroboros.Network.PeerSelection.LedgerPeers
        Ouroboros.Network.PeerSelection.LocalRootPeers
        Ouroboros.Network.PeerSelection.PeerMetric
        Ouroboros.Network.PeerSelection.PeerMetric.Type
        Ouroboros.Network.PeerSelection.PeerStateActions
        Ouroboros.Network.PeerSelection.RelayAccessPoint
        Ouroboros.Network.PeerSelection.RootPeersDNS.DNSActions
        Ouroboros.Network.PeerSelection.RootPeersDNS
        Ouroboros.Network.PeerSelection.Governor
        Ouroboros.Network.PeerSelection.Simple
        Ouroboros.Network.Protocol.ChainSync.Client
        Ouroboros.Network.Protocol.ChainSync.ClientPipelined
        Ouroboros.Network.Protocol.ChainSync.Codec
        Ouroboros.Network.Protocol.ChainSync.Server
        Ouroboros.Network.Protocol.ChainSync.Type
        Ouroboros.Network.Protocol.ChainSync.PipelineDecision
        Ouroboros.Network.Protocol.ChainSync.Examples
        Ouroboros.Network.Protocol.BlockFetch.Type
        Ouroboros.Network.Protocol.BlockFetch.Client
        Ouroboros.Network.Protocol.BlockFetch.Server
        Ouroboros.Network.Protocol.BlockFetch.Codec
        Ouroboros.Network.Protocol.LocalStateQuery.Client
        Ouroboros.Network.Protocol.LocalStateQuery.Codec
        Ouroboros.Network.Protocol.LocalStateQuery.Examples
        Ouroboros.Network.Protocol.LocalStateQuery.Server
        Ouroboros.Network.Protocol.LocalStateQuery.Type
        Ouroboros.Network.Protocol.LocalTxMonitor.Type
        Ouroboros.Network.Protocol.LocalTxMonitor.Client
        Ouroboros.Network.Protocol.LocalTxMonitor.Server
        Ouroboros.Network.Protocol.LocalTxMonitor.Codec
        Ouroboros.Network.Protocol.TxSubmission2.Type
        Ouroboros.Network.Protocol.TxSubmission2.Codec
        Ouroboros.Network.Protocol.TxSubmission2.Client
        Ouroboros.Network.Protocol.TxSubmission2.Server
        Ouroboros.Network.Protocol.LocalTxSubmission.Type
        Ouroboros.Network.Protocol.LocalTxSubmission.Client
        Ouroboros.Network.Protocol.LocalTxSubmission.Server
        Ouroboros.Network.Protocol.LocalTxSubmission.Codec
        Ouroboros.Network.Protocol.KeepAlive.Type
        Ouroboros.Network.Protocol.KeepAlive.Client
        Ouroboros.Network.Protocol.KeepAlive.Server
        Ouroboros.Network.Protocol.KeepAlive.Codec
        Ouroboros.Network.TxSubmission.Inbound
        Ouroboros.Network.TxSubmission.Mempool.Reader
        Ouroboros.Network.TxSubmission.Outbound
        Ouroboros.Network.MockChain.Chain
        Ouroboros.Network.MockChain.ProducerState
        Ouroboros.Network.Testing.ConcreteBlock

    hs-source-dirs:   src
    other-modules:
        Ouroboros.Network.Diffusion.Common
        Ouroboros.Network.PeerSelection.Governor.ActivePeers
        Ouroboros.Network.PeerSelection.Governor.EstablishedPeers
        Ouroboros.Network.PeerSelection.Governor.KnownPeers
        Ouroboros.Network.PeerSelection.Governor.Monitor
        Ouroboros.Network.PeerSelection.Governor.RootPeers
        Ouroboros.Network.PeerSelection.Governor.Types
        Ouroboros.Network.Diffusion.Utils

    default-language: Haskell2010
    other-extensions:
        BangPatterns DataKinds EmptyCase ExistentialQuantification
        FlexibleContexts FlexibleInstances FunctionalDependencies GADTs
        GADTSyntax GeneralizedNewtypeDeriving MultiParamTypeClasses
        NamedFieldPuns OverloadedStrings PolyKinds RankNTypes
        RecordWildCards ScopedTypeVariables TemplateHaskell TupleSections
        TypeApplications TypeFamilies TypeInType

    ghc-options:
        -Wall -Wno-unticked-promoted-constructors -Wcompat
        -Wincomplete-uni-patterns -Wincomplete-record-updates
        -Wpartial-fields -Widentities -Wredundant-constraints

    build-depends:
        base >=4.9 && <4.15,
        aeson,
        async >=2.2 && <2.3,
        base16-bytestring,
        bytestring >=0.10 && <0.11,
        cborg >=0.2.1 && <0.3,
        containers,
        deepseq,
        directory,
        dns,
        fingertree >=0.1.4.2 && <0.2,
        iproute,
        mtl,
        nothunks,
        network >=3.1.2 && <3.2,
        pretty-simple,
        psqueues >=0.2.3 && <0.3,
        serialise >=0.2 && <0.3,
        random,
        strict-containers,
        cardano-binary,
        cardano-prelude,
        cardano-slotting,
        contra-tracer,
        monoidal-synchronisation,
        io-classes >=0.1 && <0.3,
        network-mux >=0.1 && <1.0,
        ouroboros-network-framework >=0.1 && <1.0,
        strict-stm >=0.1 && <0.2,
        typed-protocols >=0.1 && <1.0,
        typed-protocols-cborg >=0.1 && <1.0,
        hashable >=1.2 && <1.4,
        text >=1.2 && <1.3,
        time >=1.9.1 && <1.11

    if !os(windows)
        build-depends: unix

    if flag(asserts)
        ghc-options: -fno-ignore-asserts

library protocol-tests
    exposed-modules:
        Ouroboros.Network.Protocol.BlockFetch.Direct
        Ouroboros.Network.Protocol.BlockFetch.Examples
        Ouroboros.Network.Protocol.BlockFetch.Test
        Ouroboros.Network.Protocol.ChainSync.Direct
        Ouroboros.Network.Protocol.ChainSync.DirectPipelined
        Ouroboros.Network.Protocol.ChainSync.ExamplesPipelined
        Ouroboros.Network.Protocol.ChainSync.Test
        Ouroboros.Network.Protocol.Handshake.Direct
        Ouroboros.Network.Protocol.Handshake.Test
        Ouroboros.Network.Protocol.LocalStateQuery.Direct
        Ouroboros.Network.Protocol.LocalStateQuery.Test
        Ouroboros.Network.Protocol.LocalTxSubmission.Direct
        Ouroboros.Network.Protocol.LocalTxSubmission.Examples
        Ouroboros.Network.Protocol.LocalTxSubmission.Test
        Ouroboros.Network.Protocol.LocalTxMonitor.Direct
        Ouroboros.Network.Protocol.LocalTxMonitor.Examples
        Ouroboros.Network.Protocol.LocalTxMonitor.Test
        Ouroboros.Network.Protocol.TxSubmission2.Direct
        Ouroboros.Network.Protocol.TxSubmission2.Test
        Ouroboros.Network.Protocol.TxSubmission2.Examples
        Ouroboros.Network.Protocol.KeepAlive.Direct
        Ouroboros.Network.Protocol.KeepAlive.Examples
        Ouroboros.Network.Protocol.KeepAlive.Test
        Test.ChainGenerators
        Test.ChainProducerState
        Test.Ouroboros.Network.Testing.Utils

    hs-source-dirs:   protocol-tests
    default-language: Haskell2010
    ghc-options:      -Wall -Wno-unticked-promoted-constructors
    build-depends:
        base,
        bytestring,
        cborg,
        containers,
        hashable,
        pipes,
        QuickCheck,
        quickcheck-instances,
        serialise,
        strict-containers,
        tasty,
        tasty-quickcheck,
        text,
        cardano-slotting,
        contra-tracer,
        io-classes,
        io-sim,
        network-mux,
        ouroboros-network,
        ouroboros-network-framework,
        ouroboros-network-testing,
        strict-stm,
        typed-protocols

executable demo-chain-sync
    main-is:          chain-sync.hs
    hs-source-dirs:   demo
    default-language: Haskell2010
    ghc-options:      -Wall -threaded -rtsopts
    build-depends:
        base,
        async,
        bytestring,
        containers,
        directory,
        random,
        serialise,
        stm,
        contra-tracer,
        typed-protocols,
        network-mux,
        ouroboros-network-framework,
        ouroboros-network

test-suite test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    other-modules:
        Ouroboros.Network.BlockFetch.Examples
        Ouroboros.Network.MockNode
        Test.AnchoredFragment
        Test.Chain
        Test.LedgerPeers
        Test.Ouroboros.Network.Diffusion.Node
        Test.Ouroboros.Network.Diffusion.Node.NodeKernel
        Test.Ouroboros.Network.Diffusion.Node.MiniProtocols
        Test.Ouroboros.Network.Diffusion.Policies
        Test.Ouroboros.Network.BlockFetch
        Test.Ouroboros.Network.KeepAlive
        Test.Ouroboros.Network.MockNode
        Test.Ouroboros.Network.TxSubmission
        Test.Ouroboros.Network.PeerSelection
        Test.Ouroboros.Network.PeerSelection.Instances
        Test.Ouroboros.Network.PeerSelection.LocalRootPeers
        Test.Ouroboros.Network.PeerSelection.RootPeersDNS
        Test.Ouroboros.Network.PeerSelection.Json
        Test.Ouroboros.Network.PeerSelection.MockEnvironment
        Test.Ouroboros.Network.PeerSelection.PeerGraph
        Test.Ouroboros.Network.PeerSelection.PeerMetric
        Test.Ouroboros.Network.NodeToNode.Version
        Test.Ouroboros.Network.NodeToClient.Version
        Test.Ouroboros.Network.Orphans
        Test.Ouroboros.Network.ShrinkCarefully
        Test.Ouroboros.Network.Testnet
        Test.Ouroboros.Network.Testnet.Simulation.Node
        Test.Mux
        Test.Pipe
        Test.Socket
        Test.PeerState
        Test.Version

    default-language: Haskell2010
    ghc-options:
        -Wall -Wno-unticked-promoted-constructors -fno-ignore-asserts
        -threaded -rtsopts +RTS -T -RTS

    build-depends:
        base,
        QuickCheck,
        aeson,
        array,
        async,
        bytestring,
        cborg,
        containers,
        dns,
        deque,
        hashable,
        iproute,
        mtl,
        network,
        pipes,
        pretty-simple,
        process,
        psqueues,
        random,
        serialise,
        tasty,
        tasty-hunit,
        tasty-quickcheck,
        text,
        time,
        cardano-prelude,
        cardano-slotting,
        contra-tracer,
        nothunks,
        io-classes,
        io-sim,
        monoidal-synchronisation,
        network-mux,
        ouroboros-network,
        ouroboros-network-framework,
        ouroboros-network-framework:testlib,
        ouroboros-network-testing,
        protocol-tests,
        strict-stm,
        typed-protocols,
        typed-protocols-examples

    if os(windows)
        build-depends:
            Win32-network <0.2.0.0,
            Win32 >=2.5.4.1 && <3.0

    if flag(ipv6)
        cpp-options: -DOUROBOROS_NETWORK_IPV6

test-suite cddl
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test-cddl
    default-language: Haskell2010
    ghc-options:
        -Wall -Wno-unticked-promoted-constructors -fno-ignore-asserts

    build-depends:
        base,
        bytestring,
        cborg,
        containers,
        directory,
        filepath,
        mtl,
        process-extras,
        serialise,
        text,
        temporary,
        QuickCheck,
        quickcheck-instances,
        tasty,
        tasty-hunit,
        tasty-quickcheck,
        typed-protocols,
        ouroboros-network-framework,
        ouroboros-network,
        protocol-tests

    if flag(cddl)

    else
        buildable: False
